opam-version: "1.2"
name: "ppx_monoid"
version: "0.3"
maintainer: "Robert Atkey <bob.atkey@gmail.com>"
authors: "Robert Atkey <bob.atkey@gmail.com>"
homepage: "https://github.com/bobatkey/ppx-monoid"
bug-reports: "https://github.com/bobatkey/ppx-monoid"
license: "MIT"
dev-repo: "git+https://github.com/bobatkey/ppx-monoid.git"
build: [["jbuilder" "build" "-p" name "-j" jobs "@install"]]
available: [ ocaml-version >= "4.04.0" ]
